Fix label contrast (#1498)

--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -98,6 +98,11 @@
     [class*="color-text-"] {
       color: inherit !important;
     }
+
+    [class*="Label--"] {
+      color: inherit !important;
+      border-color: var(--color-state-hover-primary-text);
+    }
   }
 
   &.btn-link {
